objects/AOPS_DESKTOP_CCU003F__c.object
<CustomObject>
    <fields>
        <fullName>CCU003F_ADDRESS_SEQ__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU003F_ADDRESS_SEQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU003F_CREATE_DATE__c</fullName>
        <label>CCU003F_CREATE_DATE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU003F_CREATE_ID__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>CCU003F_CREATE_ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU003F_CUSTOMER_ID__c</fullName>
        <externalId>true</externalId>
        <label>CCU003F_CUSTOMER_ID</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU003F_CUST_LOCATION_KEY__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>CCU003F_CUST_LOCATION_KEY</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU003F_DESCRIPTION__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>CCU003F_DESCRIPTION</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU003F_DIRECTIONS_1__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>CCU003F_DIRECTIONS_1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU003F_DIRECTIONS_2__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>CCU003F_DIRECTIONS_2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU003F_FAX_CONT_SEQ__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU003F_FAX_CONT_SEQ</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU003F_LOCATION_SEQ__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU003F_LOCATION_SEQ</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU003F_PHONE_CONT_SEQ__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU003F_PHONE_CONT_SEQ</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU003F_SIGNATURE_REQ__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>CCU003F_SIGNATURE_REQ</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU003F_TIME_STAMP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU003F_TIME_STAMP</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU003F_UPDATE_DATE__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU003F_UPDATE_DATE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU003F_UPDATE_PROGRAM__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>CCU003F_UPDATE_PROGRAM</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEY__c</fullName>
        <externalId>true</externalId>
        <label>KEY</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Field__c</fullName>
        <formula>CCU003F_CUST_LOCATION_KEY__c</formula>
        <label>Search Field</label>
        <type>Text</type>
    </fields>
    <label>AOPS_DESKTOP_CCU003F</label>
    <nameField>
        <label>AOPS_DESKTOP_CCU003F Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOPS_DESKTOP_CCU003F</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>